# e-learning

./: README.md
backend/: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  scripts.py
backend/backend/: main.py
backend/backend/application/: app.py  container.py
backend/backend/application/model/: courses.py  lessons.py  youtube_client.py
backend/backend/application/routes/: __init__.py  courses_router.py  lessons_router.py  youtube_client_router.py
backend/backend/database/repositories/: lessons.py
backend/backend/domain/: exception.py
backend/backend/domain/dto/: __init__.py  base.py  create_course.py  create_lesson.py  update_course.py  update_lesson.py
backend/backend/domain/model/: base.py  course.py  lesson.py  types.py  youtube_playlist.py  youtube_video.py
backend/backend/domain/repository/: courses_repository.py  lessons_repository.py  youtube_playlist_repository.py
backend/backend/domain/use_case/: courses_use_case.py  lessons_use_case.py  youtube_playlist_use_case.py
backend/backend/handlers/: courses.py  lessons.py
backend/backend/infra/database/: __init__.py  connection.py
backend/backend/infra/repository/: courses_repository_db.py  lessons_repository_db.py  youtube_playlist_repository_api.py
backend/backend/modules/clients/: routes.py  selenium_client.py
backend/backend/modules/courses/: entities.py  handlers.py  (+4 more)
backend/backend/shared/: app.py  config.py
backend/elearning_backend/: main.py
backend/elearning_backend/database/: connection.py  models.py
backend/elearning_backend/handlers/: lessons.py
(+98 files in other folders)
