[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jgabriel1 <josegabriel@det.ufc.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
SQLAlchemy = "^1.3.22"
databases = "^0.4.1"
aiosqlite = "^0.16.0"
selenium = "^3.141.0"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
metomi-isodatetime = { git = "https://github.com/metomi/isodatetime.git" }

[tool.poetry.scripts]
dev = "scripts:dev"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
